generate employee code successfully